corrected issue with flex-wrap and edited with solutions

--- a/flexlayout_two/style.css
+++ b/flexlayout_two/style.css
@@ -29,14 +29,16 @@ body {
   background: royalblue;
   box-sizing: border-box;
   padding: 16px;
-  flex-shrink: 1;
+  flex-shrink: 0;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  padding: 32px;
+  padding: 16px;
+  margin: 16px;
+  width: 300px;
 }
 
 .footer {
@@ -52,20 +54,24 @@ a {
   font-size: 24px;
 }
 
+.main {
+  display: flex;
+  flex: 1;
+}
+
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 16px;
 }
 
 .container {
   display: flex;
   flex-wrap: wrap;
+  padding: 32px;
 }
 
-.side {
-  display: flex;
-}
-
-.main {
-  display: flex;
-  flex-grow: 1;
-}
